Bug fix: In Clippings Sidebar, synced clipping/folder doesn't load when selected if background script suspended (issue #530)
- Removed unneeded UI embellishment

--- a/wx-src/pages/sidebar.css
+++ b/wx-src/pages/sidebar.css
@@ -691,17 +691,8 @@ body[data-os="mac"] #reload-sync-fldr-msgbox {
     --height: auto;
 }
 
-#sync-progress img {
-    width: 32px;
-    height: 32px;
-}
-
 #sync-progress progress {
     width: 100%;
-}
-
-#sync-progress #sync-progress-ico {
-    text-align: center;
 }
 
 #init-error-msgbox {
